<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="about_menu">About</string>
	<string name="about_message">A utility written by the ZXing Team to help with
		the development
		of Barcode Scanner.</string>
	<string name="app_name">ZXing Test</string>

	<string name="benchmark_name">ZXing Benchmark</string>
	<string name="benchmark_help">Place images in /sdcard/zxingbenchmark, then check
		\"adb logcat\"
		for results. Turn on Airplane Mode first for more reliable results.
	</string>
	<string name="benchmark_run">Run benchmark</string>
	<string name="benchmark_running">Benchmark running\u2026</string>

	<string name="encode_bad_data">Encode bad data</string>
	<string name="encode_contact">Encode contact</string>
	<string name="encode_email">Encode email</string>
	<string name="encode_location">Encode location</string>
	<string name="encode_phone">Encode phone</string>
	<string name="encode_sms">Encode SMS</string>
	<string name="encode_url">Encode URL</string>

	<string name="get_camera_parameters">Get camera parameters</string>
	<string name="ok_button">OK</string>
	<string name="parameters_message">Collecting camera parameters to email to ZXing
		Team\u2026</string>

	<string name="result_failed">没有找到二维码</string>
	<string name="result_failed_why">你已取消扫描</string>
	<string name="result_succeeded">找到二维码</string>

	<string name="save_failed">Save failed - is the SD card installed?</string>
	<string name="save_succeeded">Save succeeded</string>
	<string name="scan_anything">Scan anything</string>
	<string name="scan_product">Scan product</string>
	<string name="scan_qr_code">Scan QR Code</string>
	<string name="search_book_contents">Search Book Contents</string>
	<string name="share_via_barcode">Share via barcode</string>
	<string name="status_message">Press the shutter button or Search to save test
		images to the
		SD card. Press DPAD_CENTER to trigger autofocus.</string>
	<string name="take_test_photos">Take test photos</string>
	<string name="menu_share">Share</string>
	<string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
	<string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.
	</string>
	<string name="button_ok">OK</string>
	<string name="contents_contact">Contact info</string>
	<string name="contents_email">Email address</string>
	<string name="contents_location">Geographic coordinates</string>
	<string name="contents_phone">Phone number</string>
	<string name="contents_sms">SMS address</string>
	<string name="contents_text">Plain text</string>

	<string name="share_name">通过条码分享</string>
	<string name="contact_appName">二维码名片通讯录</string>
	<string name="contact_detail">联系人详细信息</string>

	<string name="result_isbn">找到图书</string>
	<string name="preferences_decode_1D_title">扫描 一维条码</string>
	<string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
	<string name="preferences_decode_QR_title">扫描 QR码</string>
	<string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
	<string name="preferences_front_light_title">前灯</string>
	<string name="preferences_general_title">一般设置</string>
	<string name="preferences_name">设置</string>
	<string name="preferences_play_beep_title">提示音</string>
	<string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
	<string name="preferences_remember_duplicates_title">记住重复</string>
	<string name="preferences_result_title">结果设置</string>
	<string name="preferences_reverse_image_summary">设备上启用了前置摄像头只</string>
	<string name="preferences_reverse_image_title">反转摄像机的图像</string>
	<string name="preferences_scanning_title">条码类型选择</string>
	<string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
	<string name="preferences_supplemental_title">检索更多信息</string>
	<string name="preferences_vibrate_title">振动</string>
	<string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
	<string name="preferences_custom_product_search_title">自定义搜索网址</string>
	<string name="preferences_actions_title">找到条码时</string>
	<string name="preferences_bulk_mode_title">批量扫描模式</string>
	<string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
	
	
	<string name="msg_default_format">格式</string>
  <string name="msg_default_meta">元数据</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
  <string name="msg_default_time">时间</string>
  <string name="msg_default_type">类型</string>
  <string name="msg_encode_barcode_failed">无法生成条码。</string>
  <string name="msg_google_shopper_missing">谷歌购物未安装</string>
  <string name="msg_install_google_shopper">谷歌购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
  <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
  <string name="msg_loading_apps">加载应用名单…</string>
  <string name="msg_not_our_results">您将离开此应用程序，得到的搜索结果与此应用程序无关</string>
  <string name="msg_redirect">重定向</string>
  <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
  <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
  <string name="msg_sbc_no_page_returned">无页面返回</string>
  <string name="msg_sbc_page">页面</string>
  <string name="msg_sbc_searching_book">搜索图书…</string>
  <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
  <string name="msg_sbc_unknown_page">未知页面</string>
  <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
  <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
  <string name="msg_share_text">或键入一些文字</string>
  <string name="button_google_shopper">谷歌购物</string>
  <string name="button_wifi">连接到网络</string>
  <string name="button_cancel">取消</string>
  <string name="zxing_url">http://code.google.com/p/zxing</string>
  <string name="wifi_ssid_label">网络SSID</string>
  <string name="wifi_ssid_missing">未找到SSID名称</string>
  <string name="wifi_type_incorrect">网络类型不正确</string>
  <string name="wifi_type_label">类型</string>
  <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
  <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
  <string name="button_share_bookmark">分享书签</string>
  <string name="button_share_by_email">通过email分享</string>
  <string name="button_share_by_sms">通过短信分享</string>
  <string name="button_share_clipboard">分享剪切板</string>
  <string name="button_share_contact">分享联系人</string><string name="button_share_app">共享应用</string>
  <string name="button_clipboard_empty">清空剪切板</string>
   <string name="result_address_book">找到联系人信息</string>
   <string name="result_text">找到纯文本</string>
  <string name="result_calendar">找到日历事件</string>
  <string name="result_email_address">找到email地址</string>
  <string name="result_geo">找到地理坐标</string>
  <string name="result_product">找到产品</string>
  <string name="result_sms">找到短信地址</string>
  <string name="result_tel">找到电话号码</string>
  <string name="result_uri">找到URL</string>
  
  <string name="button_add_contact">添加联系人</string>
  <string name="button_show_map">显示地图</string>
  <string name="button_dial">拨号</string>
  <string name="button_email">发送email</string>
</resources>
