<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:gravity="center_horizontal"
             android:padding="10px">
  <TableRow>
    <Button android:id="@+id/take_test_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_test_photos"/>
    <Button android:id="@+id/get_camera_parameters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_camera_parameters"/>
  </TableRow>
  <TableRow>
    <Button android:id="@+id/scan_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_product"/>
    <Button android:id="@+id/scan_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr_code"/>
  </TableRow>
  <TableRow>
    <Button android:id="@+id/scan_anything"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_anything"/>
    <Button android:id="@+id/search_book_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_book_contents"/>
  </TableRow>
  <TableRow>
    <Button android:id="@+id/encode_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode_url"/>
    <Button android:id="@+id/encode_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode_email"/>
  </TableRow>
  <TableRow>
    <Button android:id="@+id/encode_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode_phone"/>
    <Button android:id="@+id/encode_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode_sms"/>
  </TableRow>
  <TableRow>
    <Button android:id="@+id/encode_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode_contact"/>
    <Button android:id="@+id/encode_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode_location"/>
  </TableRow>
  <TableRow>
    <Button android:id="@+id/encode_bad_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encode_bad_data"/>
    <Button android:id="@+id/share_via_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_via_barcode"/>
  </TableRow>
  <TableRow>
    <Button android:id="@+id/run_benchmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benchmark_run"/>
  </TableRow>
</TableLayout>
